--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
-    "name" : "战队管理系统",
-    "appid" : "__UNI__7656C4C",
-    "description" : "云端一体应用快速开发基本项目模版",
+    "name" : "uni-admin",
+    "appid" : "__UNI__EF9C58B",
+    "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
+    /* 5+App特有相关 */
     "app-plus" : {
         "usingComponents" : true,
-        "nvueStyleCompiler" : "uni-app",
+        "nvueCompiler" : "uni-app",
         "compilerVersion" : 3,
         "splashscreen" : {
             "alwaysShowBeforeRender" : true,
@@ -15,8 +16,11 @@
             "autoclose" : true,
             "delay" : 0
         },
+        /* 模块配置 */
         "modules" : {},
+        /* 应用发布信息 */
         "distribute" : {
+            /* android打包配置 */
             "android" : {
                 "permissions" : [
                     "<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
@@ -36,24 +40,23 @@
                     "<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
                 ]
             },
+            /* ios打包配置 */
             "ios" : {},
-            "sdkConfigs" : {
-                "push" : {
-                    "unipush" : null
-                }
-            }
+            /* SDK配置 */
+            "sdkConfigs" : {}
         }
     },
+    /* 快应用特有相关 */
     "quickapp" : {},
+    /* 小程序特有相关 */
     "mp-weixin" : {
         "appid" : "",
         "setting" : {
-            "urlCheck" : false
+            "urlCheck" : false,
+            "minified" : true,
+            "postcss" : true
         },
-        "usingComponents" : true,
-        "optimization" : {
-            "subPackages" : true
-        }
+        "usingComponents" : true
     },
     "mp-alipay" : {
         "usingComponents" : true
@@ -62,10 +65,26 @@
         "usingComponents" : true
     },
     "mp-toutiao" : {
-        "usingComponents" : true
+        "usingComponents" : true,
+        "scopedSlotsCompiler" : "augmented",
+        "setting" : {
+            "urlCheck" : false,
+            "postcss" : true,
+            "minified" : true
+        }
     },
     "uniStatistics" : {
         "enable" : false
     },
-    "vueVersion" : "3"
+    "h5" : {
+        "template" : "template.h5.html",
+        "router" : {
+            "mode" : "hash",
+            "base" : "/admin/"
+        }
+    },
+    "vueVersion" : "3",
+    "networkTimeout" : {
+        "uploadFile" : 1200000 //ms， 如果不配置，上传大文件可能会超时
+    }
 }
